cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz175782.cpp

static void iz175782_clock_advance(int advance);

void iz175782_main() {
    iz175782_clock_advance(1);
}

static void iz175782_clock_advance(int advance) {

}